; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_link.c_CIFSCouldBeMFSymlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_link.c_CIFSCouldBeMFSymlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_fattr = type { i32, i64 }

@S_IFREG = common dso_local global i32 0, align 4
@CIFS_MF_SYMLINK_FILE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CIFSCouldBeMFSymlink(%struct.cifs_fattr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cifs_fattr*, align 8
  store %struct.cifs_fattr* %0, %struct.cifs_fattr** %3, align 8
  %4 = load %struct.cifs_fattr*, %struct.cifs_fattr** %3, align 8
  %5 = getelementptr inbounds %struct.cifs_fattr, %struct.cifs_fattr* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load i32, i32* @S_IFREG, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

11:                                               ; preds = %1
  %12 = load %struct.cifs_fattr*, %struct.cifs_fattr** %3, align 8
  %13 = getelementptr inbounds %struct.cifs_fattr, %struct.cifs_fattr* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @CIFS_MF_SYMLINK_FILE_SIZE, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %19

18:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17, %10
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
